<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auxiliar_gradient"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="272dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_imageView"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_tittle_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:drawablePadding="5dp"
        android:text="@string/login_tittle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/user_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cardView_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bttn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/bttn_ripple"
                android:drawableStart="@drawable/sign_in"
                android:drawablePadding="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/bttn_login"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="80dp"
        android:background="@drawable/rectangle_transparent"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/register_textview"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bttn_register"
            android:layout_width="138dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/bttn_ripple"
            android:drawableStart="@drawable/new_user"
            android:drawablePadding="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/bttn_register"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>